# QiskitRuskit

./: .env.example  .gitignore  Dockerfile.TBD  README.md  cargo.toml  docker-compose.yml  pyproject.toml
.config/: model_selection.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: preprocess.yml
.research/: tree.txt
.research/library_info/: ML.md  Qiskit.md
.research/llm_ops/: anthropics.md
.research/tools/: gitpages.md  learning_strategies.md  qmlnotes.md  rustlang.md
.rs_bin_notes/: dev_notes.md
MLOps/AIGateway/: gateway.py
backend/EML-rs/: Cargo.toml
backend/EML-rs/src/utils/: call_python.rs
docs/: README.md  tree.txt
duh_ta/: Cargo.toml  duh_ta.md
duh_ta/src/: ingest.rs
peftgraph-rs/: Cargo.toml
py_ml/: pyproject.toml
py_ml/AIGateway/: gateway_config.yaml  models_dict.py  predict.py  togetherai_port.py
py_ml/AIGateway/autogen/: base.py  portkey_config.py  portkey_models.py
py_ml/AIGateway/langchain/: lc_base_integration.py
py_ml/AIGateway/llamaindex/: gateway.py  global_llamaindex.py  qml_new_01.py
py_ml/data_engineering/exp_projects/QC_examples/: helloworld_qc.🔥
py_ml/data_engineering/exp_projects/QML_examples/: iris_qiskit_implementation.🔥
py_ml/experimental_samples/QC_examples/: QuantumCircuit.🔥  pyHelloWorld.ipynb
py_ml/experimental_samples/QML_examples/: iris_mojo_implementation.🔥  iris_qiskit_implementation.py  mlops.mojo  torch_connector_hybrid_QNNs.🔥
py_ml/inference/together-ai/: inference.py  openai_inference.py
py_ml/providers/: anthropic.py
py_ml/pytorch_models/: pt_clustering.mojo
py_ml/rustworkx/examples/: rustworkx_gh.py
py_ml/tests/test_mojo/: test_core.🔥
py_ml/tests/test_python/: test_api_general.py
py_ml/utils/: modules.mojo
qiskit_algo/: Cargo.toml
qiskit_bridge/: Cargo.toml
qiskit_bridge/src/: lib.rs
qml_rustkit/: Cargo.toml
quantilay/: Cargo.toml
src/: lib.rs
(+4 files in other folders)
